# wadkrabber-stats

./: README.md  app.py  pyproject.toml  requirements.txt
data/: wadkrabber.csv
