[tool.poetry]
name = "wadkrabber-stats"
version = "0.1.0"
description = "Streamlit sail log explorer for Wadkrabber voyages."
authors = ["Ennin001 <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
pandas = "^2.1"
pydeck = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
